--- a/pages/person/index.wxml
+++ b/pages/person/index.wxml
@@ -1,44 +1,53 @@
 <view class="page-content">
     <view class="main-content">
-        <view class="bg-white padding flex align-center" style="margin-bottom: 20rpx">
-            <view class="cu-avatar margin-right lg" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big81005.jpg);"></view>
-            <view>
-                <view class="text-lg text-bold text-black padding-bottom-sm">小花花</view>
-                <view class=" text-black">联系方式：13650964250</view>
-            </view>
-        </view>
+        <block wx:if="{{userInfo.phone}}">
+            <view class="bg-white padding flex align-center" style="margin-bottom: 20rpx">
+                <image  wx:if="{{!authInfo}}" src="../../image/people.png" class="margin-right" style="width:124rpx;height:124rpx" />
+                <view class="cu-avatar margin-right lg"  wx:if="{{authInfo}}" style="background-image:url({{authInfo.avatarUrl}});"></view>
+                <view>
+                    <view class="text-lg text-bold text-black padding-bottom-sm" wx:if="{{authInfo}}">{{authInfo.nickName}}</view>
+                    <view><button class="get-btn" open-type="getUserInfo" bindgetuserinfo="getUserInfo"  wx:if="{{!authInfo}}"> 获取头像昵称 </button></view>
+                    <view class=" text-black">联系方式：{{userInfo.phone}}</view>
+                </view>
 
-        <van-cell-group>
-            <van-cell size="large" is-link url="/pages/resultSearch/index">
-                <view slot="title" class="cell-title">
-                    <!-- <text class="cell-icon cuIcon-selection"></text> -->
-                    <text>成绩查询 / 比赛查询</text>
-                </view>
-            </van-cell>
-        </van-cell-group>
-        <van-cell-group>
-            <van-cell size="large">
-                <view slot="title" class="cell-title">
-                    <!-- <text class="cell-icon cuIcon-list"></text> -->
-                    <text>我的培训</text>
-                </view>
-            </van-cell>
-            <view class="padding bg-white train-list">
-                <block wx:if="{{trainList.length}}">
-                    <view class="item" wx:for="{{trainList}}"><text class="name">{{item.title}}</text><text class="time">{{item.activity_time}}</text></view>
-                </block>
-                <view wx:else class="item" style="justify-content:center">无相关数据</view>
             </view>
-        </van-cell-group>
-        <van-cell-group>
-            <van-cell size="large" is-link url="/pages/payRecord/index">
-                <view slot="title" class="cell-title">
-                    <!-- <text class="cell-icon cuIcon-pay"></text> -->
-                    <text>付款记录</text>
-                </view>
-            </van-cell>
-        </van-cell-group>
 
+            <van-cell-group>
+                <van-cell size="large" is-link url="/pages/resultSearch/index">
+                    <view slot="title" class="cell-title">
+                        <!-- <text class="cell-icon cuIcon-selection"></text> -->
+                        <text>成绩查询 / 比赛查询</text>
+                    </view>
+                </van-cell>
+            </van-cell-group>
+            <van-cell-group>
+                <van-cell size="large">
+                    <view slot="title" class="cell-title">
+                        <!-- <text class="cell-icon cuIcon-list"></text> -->
+                        <text>我的培训</text>
+                    </view>
+                </van-cell>
+                <view class="padding bg-white train-list">
+                    <block wx:if="{{trainList.length}}">
+                        <view class="item" wx:for="{{trainList}}"><text class="name">{{item.title}}</text><text class="time">{{item.activity_time}}</text></view>
+                    </block>
+                    <view wx:else class="item" style="justify-content:center">无相关数据</view>
+                </view>
+            </van-cell-group>
+            <van-cell-group>
+                <van-cell size="large" is-link url="/pages/payRecord/index">
+                    <view slot="title" class="cell-title">
+                        <!-- <text class="cell-icon cuIcon-pay"></text> -->
+                        <text>付款记录</text>
+                    </view>
+                </van-cell>
+            </van-cell-group>
+        </block>
+        <block wx:else>
+            <view class="padding flex flex-direction align-center">
+                <button class="cu-btn" style="margin:30% auto" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">手机号授权</button>
+            </view>
+        </block>
         <!-- <view class="padding flex flex-direction" style="margin-top:50rpx">
             <button class="submit-btn cu-btn bg-red lg" bindtap="signUp">退出登录</button>
         </view> -->
