--- a/pages/resultSearch/index.wxml
+++ b/pages/resultSearch/index.wxml
@@ -1,34 +1,38 @@
-<view class="padding flex flex-direction align-center bg-white margin-bottom-sm">
-    <view class="title">身份证号码</view>
-    <input type="idcard" focus="{{true}}" placeholder="请输入需要查询的身份证号码" class="input"/>
-    <button class="submit-btn cu-btn lg" bindtap="signUp">确认</button>
-</view>
+<van-cell-group>
+    <van-field size="large" required label="姓名" type="text" data-key="form.name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
+    <van-field size="large" required label="身份证" type="idcard" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange" />
+    <view class="padding flex flex-direction align-center bg-white margin-bottom-sm">
+        <button class="submit-btn cu-btn lg" bindtap="getList">确认</button>
+    </view>
+</van-cell-group>
 
-<view class="nores-tips" wx:if="{{list.length == 0}}">
+<view class="nores-tips" wx:if="{{finish && achievement.length == 0 && signuplist.length == 0}}">
     <image src="../../image/nres.png" />
     <view>找不到你的成绩/比赛记录哦！</view>
     <view>快去报名参加你喜欢的项目/比赛吧！</view>
 </view>
 
-<block  wx:if="{{list.length}}">
+<block  wx:if="{{finish && achievement.length}}">
     <view class="cu-bar bg-white">
         <view class="part-title">我的成绩</view>
     </view>
     <view class="bg-white">
-        <view wx:for="{{[1,2,3]}}" class="match-item">
+        <view wx:for="{{achievement}}" class="match-item">
             <view class="name">2020秋季全国钢琴大赛</view>
             <view>一等奖</view>
         </view>
     </view>
+</block>
 
+<block  wx:if="{{finish && signuplist.length}}">
     <view class="cu-bar bg-white" style="margin-top: 30rpx">
         <view class="part-title">我的比赛</view>
     </view>
     <view class="bg-white">
-        <view wx:for="{{[1,2,3]}}" class="match-item2">
+        <view wx:for="{{signuplist}}" class="match-item2">
             <view class="row">
-                <view>2020秋季全国钢琴大赛</view>
-                <view>2020-10-10 10:00</view>
+                <view>{{item.title}}</view>
+                <view>{{item.activity_time}}</view>
             </view>
             <view class="row">
                 <view>赛区：</view>
