--- a/pages/signUp/index.wxml
+++ b/pages/signUp/index.wxml
@@ -17,14 +17,18 @@
             </view>
             <van-field size="large" required label="联系方式" type="number" data-key="form.phone" value="{{ form.phone }}" placeholder="请输入" bind:change="onChange" />
             <van-field size="large" required label="出生年月日" data-key="form.birthday" value="{{ form.birthday }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="身份证号码" type="idcard" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="身份证号码" hidden="{{cardType == 2}}" type="idcard" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange">
+                <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showOtherCard">其他证件</van-button>
+            </van-field>
+            <van-field size="large" required label="其他证件" hidden="{{cardType == 1}}" data-key="form.otherCard" value="{{ form.otherCard }}" placeholder="请输入" bind:change="onChange">
+                <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showIdCard">身份证</van-button>
+            </van-field>
             <van-field size="large" required label="监护人" data-key="form.guardian" value="{{ form.guardian }}" placeholder="请输入" bind:change="onChange" />
         </van-cell-group>
 
         <van-cell-group>
             <van-field size="large" required label="指导老师" data-key="form.instructor" value="{{ form.instructor }}" placeholder="请输入" bind:change="onChange" />
             <van-field size="large" required label="联系方式" type="number" data-key="form.instructor_phone" value="{{ form.instructor_phone }}" placeholder="请输入" bind:change="onChange" />
-            
         </van-cell-group>
 
         <van-cell-group>
@@ -46,9 +50,11 @@
             </view>
         </van-cell-group>
 
-        
         <van-cell-group>
-            <van-field size="large" label="分赛场" data-key="form.fensaichang" value="{{ form.fensaichang }}" placeholder="请输入" bind:change="onChange" />  
+            <van-field size="large" label="分赛场" data-key="form.fensaichang" value="{{ form.fensaichang }}" placeholder="请输入" bind:change="onChange" /> 
+            <block wx:for="{{form.textList}}">
+                <van-field size="large" label="{{item.name}}" data-key="{{item.key}}" required="{{item.required}}" value="{{ item.value }}" placeholder="请输入" bind:change="onChange" />
+            </block> 
         </van-cell-group>
     </scroll-view>
     
