--- a/pages/signUp/index.wxml
+++ b/pages/signUp/index.wxml
@@ -20,18 +20,18 @@
                 <text class="title">出生年月日</text>
                 <date-picker data-key="form.birthday" bind:change="changePicker" />
             </view>
-            <van-field size="large" required label="身份证号码" hidden="{{cardType == 2}}" type="idcard" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange">
-                <!-- <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showOtherCard">其他证件</van-button> -->
+            <van-field size="large"  cursor-spacing="{{200}}" required label="身份证号码" wx:if="{{cardType == 1}}" type="idcard" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange">
+                <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showOtherCard" style="color:#409EFF">其他证件</van-button>
             </van-field>
-            <van-field size="large" required label="其他证件" hidden="{{cardType == 1}}" data-key="form.otherCard" value="{{ form.otherCard }}" placeholder="请输入" bind:change="onChange">
-                <!-- <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showIdCard">身份证</van-button> -->
+            <van-field size="large"  cursor-spacing="{{200}}" required label="其他证件" wx:if="{{cardType == 2}}" data-key="form.otherid" value="{{ form.otherid }}" placeholder="请输入" bind:change="onChange">
+                <van-button slot="button" type="primary" size="mini" type="primary" bindtap="showIdCard" style="color:#409EFF">身份证</van-button>
             </van-field>
-            <van-field size="large" required label="监护人" data-key="form.guardian" value="{{ form.guardian }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large"  cursor-spacing="{{200}}" required label="监护人" data-key="form.guardian" value="{{ form.guardian }}" placeholder="请输入" bind:change="onChange" />
         </van-cell-group>
 
         <van-cell-group>
-            <van-field size="large" required label="指导老师" data-key="form.instructor" value="{{ form.instructor }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="联系方式" type="number" data-key="form.instructor_phone" value="{{ form.instructor_phone }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large"  cursor-spacing="{{200}}" required label="指导老师" data-key="form.instructor" value="{{ form.instructor }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large"  cursor-spacing="{{200}}" required label="联系方式" type="number" data-key="form.instructor_phone" value="{{ form.instructor_phone }}" placeholder="请输入" bind:change="onChange" />
         </van-cell-group>
 
         <van-cell-group>
@@ -47,16 +47,16 @@
                         </view>
                     </view>
                 </van-cell>
-                <van-field size="large" required label="曲目名称" data-key="form.songlist[{{index}}].song" value="{{ item.song }}" placeholder="请输入" bind:change="onChange" />
-                <van-field size="large" required label="作品号/序号" data-key="form.songlist[{{index}}].song_number" value="{{ item.song_number }}" placeholder="请输入" bind:change="onChange" />
-                <van-field size="large" required label="作者" data-key="form.songlist[{{index}}].song_authod" value="{{ item.song_authod }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" cursor-spacing="{{200}}" required label="曲目名称" data-key="form.songlist[{{index}}].song" value="{{ item.song }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" cursor-spacing="{{200}}" required label="作品号/序号" data-key="form.songlist[{{index}}].song_number" value="{{ item.song_number }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" cursor-spacing="{{200}}" required label="作者" data-key="form.songlist[{{index}}].song_authod" value="{{ item.song_authod }}" placeholder="请输入" bind:change="onChange" />
             </view>
         </van-cell-group>
 
         <van-cell-group>
-            <van-field size="large" label="分赛场" data-key="form.fensaichang" value="{{ form.fensaichang }}" placeholder="请输入" bind:change="onChange" /> 
+            <van-field size="large"  cursor-spacing="{{200}}" label="分赛场" data-key="form.fensaichang" value="{{ form.fensaichang }}" placeholder="请输入" bind:change="onChange" /> 
             <block wx:for="{{message.fields}}" wx:for-index="idx" wx:for-item="itemName">
-                <van-field size="large" label="{{itemName.title}}" data-key="form.signupInfo[{{index}}].{{itemName.fields}}" value="{{ item[itemName.fields] }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large"  cursor-spacing="{{200}}" label="{{itemName.title}}" data-key="form.{{itemName.fields}}" value="{{ item[itemName.fields] }}" placeholder="请输入" bind:change="onChange" />
             </block> 
         </van-cell-group>
     </scroll-view>
